<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_uuid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:text="@string/uuid"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_uuid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:padding="15dp"
        android:text="@string/wechat_uuid"
        android:textSize="16sp"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintLeft_toRightOf="@id/tv_uuid"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_uuid" />

    <TextView
        android:id="@+id/tv_major"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/major"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_uuid" />

    <EditText
        android:id="@+id/et_major"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:digits="0123456789"
        android:hint="@string/hint_major"
        android:inputType="number"
        android:maxLength="5"
        android:padding="15dp"
        android:textSize="16sp"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintLeft_toRightOf="@id/tv_major"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_major" />

    <TextView
        android:id="@+id/tv_minor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/minor"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_major" />

    <EditText
        android:id="@+id/et_minor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:digits="0123456789"
        android:hint="@string/hint_minor"
        android:inputType="number"
        android:maxLength="5"
        android:padding="15dp"
        android:textSize="16sp"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintLeft_toRightOf="@id/tv_major"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_minor" />

    <TextView
        android:id="@+id/tv_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_blue"
        android:padding="10dp"
        android:text="@string/start"
        android:textColor="#ffffff"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_minor" />

</androidx.constraintlayout.widget.ConstraintLayout>